...
 * @property CALENDAR_ICON_BUTTON_END Tag for the calendar icon button associated with the end date.
 * @property CREATE_PROJECT_BUTTON Tag for the "Create Project" button.
 * @property BACK_BUTTON Tag for the back button.
 * @function createProjectStatusTestTag Generates a dynamic test tag for a given ProjectStatus.
 */
object CreateProjectScreenTestTags {
  const val PROJECT_NAME_TEST_TAG_TEXT_INPUT = "Project name text input"
  const val DESCRIPTION_NAME_TEST_TAG_TEXT_INPUT = "Description text input"
  const val START_DATE_TEST_TAG = "start date text input test tag"
  const val END_DATE_TEST_TAG = "end date test tag"
  const val PROJECT_STATUS_DROPDOWN_TEST_TAG = "project status dropdown test tag"
  const val CHECKBOX_ENABLE_GOOGLE_DRIVE_FOLDER_TEST_TAG = "checkbox enable google drive folder"
  const val CHECKBOX_LINK_GITHUB_REPOSITORY = "checkbox link github repository"
  const val GITHUB_URL_TEST_TAG = "text input github url"

  const val CALENDAR_ICON_BUTTON_START = "calendar icon start"
  const val CALENDAR_ICON_BUTTON_END = "calendar icon end"

  const val CREATE_PROJECT_BUTTON = "create project button"
  const val BACK_BUTTON = "back_button"

  fun createProjectStatusTestTag(status: ProjectStatus): String {
    return "status: ${status.name}"
  }
}

...
